--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <button type="button" id="submitButton">Submit</button>
 </form>
 
+
+<div>
+    <div style="width:100px;" id="luggage_volume_undersize_results"></div>
+    <div style="width:100px;" id="luggage_volume_equals_results"></div>
+    <div style="width:100px;" id="luggage_volume_oversize_results"></div>
+    
+</div>
+
 <script src="lib/js/third-party/jquery-3.2.1.min.js"></script>
 <script src="lib/js/third-party/underscore-prod-1.8.3.js"></script>
 <script src="lib/js/Modules.js"></script>
