* moved/renamed DataScraper to LuggageData
* removed LuggageParser (no longer used)

* changed all/most function declarations/expressions to arrow functions for several reasons

1. consistency between inline/lambda fuctions and "normal" top level functions
2. arrow functions encourage creating many small modular functions
3. arrow functions are cleaner
4. although not used here, => makes 'this' act normally
5. doesn't bind arguments, which is an implicit variable - handling all arguments must be done explicitly and clearly

note: many of these arrow functions still need refactoring from statements into expressions

--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
     <script src="lib/js/JqueryCache.js"></script>
     <script src="lib/js/Requester.js"></script>   
     <script src="lib/js/DomWriter.js"></script>
-    <script src="lib/js/DataScraper.js"></script>   
+    <script src="lib/js/LuggageData.js"></script>   
     
     <script src="lib/js/DomWriter.js"></script>
     <script src="lib/js/VolumeResultsWriter.js"></script>
     <script src="lib/js/DimensionsResultsWriter.js"></script>
     <script src="lib/js/DomReader.js"></script>
-    <script src="lib/js/LuggageParser.js"></script>
     <script src="lib/js/LuggageDimensions.js"></script>
     <script src="lib/js/Luggage.js"></script>
     <script src="lib/js/Main.js"></script>
